fix: vercel issue

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-public-anon-key
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
 STRIPE_SECRET_KEY=your-stripe-secret-key
 STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret  
-SUCCESS_URL=https://fahim-stripe-with-supabase-nonsub.vercel.app/success
-CANCEL_URL=https://fahim-stripe-with-supabase-nonsub.vercel.app/cancel
+SUCCESS_URL=localhost:3000/success
+CANCEL_URL=localhost:3000/cancel
 
