--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@stripe/stripe-js": "^3.0.5",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/micro": "^7.3.7",
+    "micro": "^10.0.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
